Update: implementação da validação de e-mail unico e atualização nos testes.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,5 +3,6 @@ notblank.autor.nome=O campo 'nome' é obrigatório.
 notBlank.autor.email=O campo 'e-mail' é obrigatório.
 
 email.autor.notvalid=O campo 'email' não está preenchido com um formato válido.
+emailunico.autor.notvalid=O e-mail já cadastrado.
 
 size.autor.descricao=O campo 'descricao' deve ser preenchido e possuir o no máximo 400 caracteres.
