Atualizando collections, implementação da annotation e messages.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 # Message validations - Annotation
 notblank.autor.nome=O campo 'nome' é obrigatório.
-notBlank.autor.email=O campo 'e-mail' é obrigatório.
+notblank.autor.email=O campo 'e-mail' é obrigatório.
 
 email.autor.notvalid=O campo 'email' não está preenchido com um formato válido.
 emailunico.autor.notvalid=O e-mail já cadastrado.
