Atualização: adicionando annotation UniqueValue, atualizando estrutura de pacotes.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,4 +5,6 @@ notblank.autor.email=O campo 'e-mail' é obrigatório.
 email.autor.notvalid=O campo 'email' não está preenchido com um formato válido.
 emailunico.autor.notvalid=O e-mail já cadastrado.
 
+uniquevalue.message=Já existe um registro cadastro, por favor verifique as informações!
+
 size.autor.descricao=O campo 'descricao' deve ser preenchido e possuir o no máximo 400 caracteres.
